--- a/index.html
+++ b/index.html
@@ -145,31 +145,27 @@
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </div>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
                     </a>
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -181,39 +177,35 @@
                 <p class="contacts-info">Frontend Developer</p>
                 <ul class="contacts-info-list">
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -229,39 +221,35 @@
                 <p class="contacts-info">Marketing</p>
                 <ul class="contacts-info-list">
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="contacts-info-item">
                     <a href="#" class="contacts-info-link">
-                      <div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg></div
-                    ></a>
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -277,39 +265,35 @@
                 <p class="contacts-info">UI Designer</p>
                 <ul class="contacts-info-list">
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="contacts-info-item">
-                    <a href="#" class="contacts-info-link"
-                      ><div class="contacts-info-container">
-                        <svg class="contacts-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg></div
-                    ></a>
+                    <a href="#" class="contacts-info-link">
+                      <svg class="contacts-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
